[package]
name = "rosthem"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rosthem-dto = { path = "../rosthem-dto", version = "0.1" }

[build-dependencies]
bindgen = "0.59.1"